Drop down list now displays in proper position.

--- a/demo.html
+++ b/demo.html
@@ -12,7 +12,7 @@
 	<h1>ComboBox demos</h1>
 	<h2>Simple combobox from array</h2>
 	<p>
-	<input id = "demo1" />
+	<label for = "demo1">First demo: </label><input id = "demo1" />
 	</p>
 	<script>
 		$('#demo1').combobox({
