Added autoShow option which displays the list whenever the textbox gets focus.

--- a/demo.html
+++ b/demo.html
@@ -16,7 +16,8 @@
 	</p>
 	<script>
 		$('#demo1').combobox({
-			data: ['Apples', 'Oranges', 'Pears', 'Bananas', 'Kiwis', 'Grapes']
+			data: ['Apples', 'Oranges', 'Pears', 'Bananas', 'Kiwis', 'Grapes'],
+			autoShow: false
 		});
 	</script>
 	<h2>Simple combobox from select</h2>
