Preserves name, class, and id now.

--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
 	<p>
 	<label for = "demo1">First demo: </label><input id = "demo1" />
 	</p>
+	<p><a href = "" onclick = "alert($('#demo1').val()); return false;">Show val</a></p>
 	<script>
 		$('#demo1').combobox({
 			data: ['Apples', 'Oranges', 'Pears', 'Bananas', 'Kiwis', 'Grapes'],
