Clarified demo text for autoShow.

--- a/demo.html
+++ b/demo.html
@@ -12,6 +12,7 @@
 	<h1>ComboBox demos</h1>
 	<h2>Simple combobox from array</h2>
 	<p>A custom listHTML has been provided here, so that the display doesn't have to match the value of the selection.</p>
+	<p>Also, this has autoShow set to false, which is why the drop-down doesn't automatically appear when you click on the text field.</p>
 	<p>
 	<label for = "demo1">First demo: </label>
 	<input name = "field1" id = "demo1" class = "inputField" />
