--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
 	<h2>Simple combobox from array</h2>
 	<p>A custom listHTML has been provided here, so that the display doesn't have to match the value of the selection.</p>
 	<p>Also, this has autoShow set to false, which is why the drop-down doesn't automatically appear when you click on the text field.</p>
-	<p>
+	<p style = "position: relative">
 	<label for = "demo1">First demo: </label>
 	<input name = "field1" id = "demo1" class = "inputField" />
 	</p>
