Have list and arrow pick up classes from original item.

--- a/demo.html
+++ b/demo.html
@@ -65,7 +65,7 @@
 			alert((ui.isCustom ? 'Custom' : 'Element ' + ui.index) + ': ' + ui.value);
 		});
 	</script>
-	<h2>Enable/Disable/Destroy</h2>
+	<h2 style = "z-index: 10">Enable/Disable/Destroy</h2>
 	<p id = "demo4">This is alt text, where the combobox would be</p>
 	<p>
 		<a href = "" onclick = "$('#demo4').combobox('enable'); return false">Enable</a> |
