Combobox preserves all the other attributes that may be set on an input field.

--- a/demo.html
+++ b/demo.html
@@ -15,7 +15,8 @@
 	<p>Also, this has autoShow set to false, which is why the drop-down doesn't automatically appear when you click on the text field.</p>
 	<p style = "position: relative">
 	<label for = "demo1">First demo: </label>
-	<input name = "field1" id = "demo1" class = "inputField" />
+	<input name = "field1" id = "demo1" class = "inputField" value = "Apple" 
+		title = "Resized using the 'size' attribute" size = "80" />
 	</p>
 	<p><a href = "" onclick = "alert($('#demo1').val()); return false;">Show val</a></p>
 	<script>
