--- a/test.html
+++ b/test.html
@@ -23,7 +23,8 @@
 	<h2>Simple combobox from array</h2>
 	<p>
 	<label for = "demo1">First demo: </label>
-	<input name = "field1" id = "demo1" class = "inputField" />
+	<input name = "field1" id = "demo1" class = "inputField" title = "Test" 
+		size = "40" maxlength = "30" value = "Apples" />
 	</p>
 	<p><a href = "" onclick = "alert($('#demo1').val()); return false;">Show val</a></p>
 </div>
