--- a/demo.html
+++ b/demo.html
@@ -3,8 +3,8 @@
 <html lang="en">
 <head>
 	<title>ComboBox demos</title>
-	<script src = "jquery-1.2.6.js"></script>
-	<script src = "ui.core.js"></script>
+	<script src = "jquery-1.3.1.js"></script>
+	<script src = "ui.core.1.6rc6.js"></script>
 	<script src = "ui.combobox.js"></script>
 	<link rel = "stylesheet" type = "text/css" href = "ui.combobox.css" />
 </head>
