Added license boilerplate.

--- a/test.html
+++ b/test.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<!-- vim: set noexpandtab : -->
+<!--
+ Copyright (c) 2008 Jonathan Tang
+ Dual licensed under the MIT (MIT-LICENSE.txt)
+and GPL (GPL-LICENSE.txt) licenses.
+
+vim: set noexpandtab : -->
 <html lang="en">
 <head>
 	<title>ComboBox Test Suite</title>
